--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   {% assign ns = "" %}
   {% assign cs = "" %}
 
-  {% if page.permalink == "/inicio" %}
+  {% if page.permalink == "/" %}
   {% assign is = "active" %}
   {% endif %}
 
