--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="AM ">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
-    
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="{{ 'css/styles-merged.css' | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ 'css/style.min.css' | prepend: site.baseurl }}">
