--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <strong><li class="{{ is }}"><a href="/es/inicio">Inicio</a></li>
+            <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
             <li class="{{ ss }}""><a href="/software">Software</a></li>
             <li class="{{ es }}"><a href="/ecommerce">E-Commerce</a></li>
@@ -62,9 +62,9 @@
             <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
-            <li><a href="http://amsoftware.solutions">
+            <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
-      </a></li>
+      </a></li>-->
           </ul>
 
           <div class="extra-text visible-xs"> 
@@ -73,9 +73,11 @@
             <p>Carretera Sur, Managua, NI</p>
             <h5>Conectar</h5>
             <ul class="social-buttons">
-              <li><a href="#"><i class="icon-twitter"></i></a></li>
-              <li><a href="#"><i class="icon-facebook2"></i></a></li>
-              <li><a href="#"><i class="icon-instagram2"></i></a></li>
+              <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/AMSoftware_es/"><i class="icon-twitter"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
             </ul>
           </div>
         </nav>
