--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,13 +49,15 @@
       <div class="row copyright">
         <div class="col-md-12">
           <div class="probootstrap-footer-widget right">
-            <ul class="probootstrap-social">
+            <center>
+              <ul class="probootstrap-social">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/AMSoftware_es/"><i class="icon-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
             </ul>
+          </center>
           </div>
         </div>
         <div class="col-md-12">
