--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
         <div class="col-md-6">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Suscríbete</h4>
-            <p>Suscríbete a nuestra lista de correos y reciba las mejores ofertas y muchas sorpresas cada semana.</p>
+            <p>Suscríbete a nuestra lista de correos y recibe las mejores ofertas y muchas sorpresas cada semana.</p>
             <!--<form action="#">
               <div class="form-field">-->
                 <!--<input type="text" class="form-control" placeholder="Correo">-->
