--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,13 +72,14 @@
             <h5>Dirección</h5>
             <p>Carretera Sur, Managua, NI</p>
             <h5>Conectar</h5>
-            <ul class="social-buttons">
+            <center>
+                                                        <ul class="social-buttons">
               <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/AMSoftware_es/"><i class="icon-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
-            </ul>
+                                                                                                             </ul></center>
           </div>
         </nav>
     </div>
