--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,6 +79,30 @@
             <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
+                                                   
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+                                                                                                             
+<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-language" style="color:#fff;"></i> </a>
+						<ul class="dropdown-menu">
+								<li><a href="/"><span class="flag-icon flag-icon-us"></span></a></li>
+								<li><a href="/en/"<span class="flag-icon flag-icon-es"></span></a></li>
+								<!--<li><a href="/{{ user.username }}/oficina/perfil" style="color:#101820;">Mi Perfil</a></li>
+								<li><a href="{% url 'logout'%}?next={{request.path}}" style="color:#101820;">Cerrar Sesión</a></li>-->
+							</ul>
+						</li>
+                                                                                    
+                                                                                    
+                                                                                    
+                                                                                    
+                                                                                    
+                                                                                    
                                                                                                              </ul></center>
           </div>
         </nav>
