--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ 'css/styles-merged.css' | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ 'css/style.min.css' | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ 'css/custom.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ 'css/flag-icon.css' | prepend: site.baseurl }}">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
