--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-/*!==============================
- * Theme Name: Haus
- * Theme URL: https://probootstrap.com/haus-free-real-estate-html5-website-template
- * Version: 1.0
- * Author: ProBootstrap.com
- * Author URL: https://probootstrap.com
- * License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
- */
+/* AM Software */
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?1z9v6x");
