--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,7 +80,10 @@
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
                                                    
-                                                                                                             
+	<select class="selectpicker" data-width="fit">
+    <option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
+  <option  data-content='<span class="flag-icon flag-icon-mx"></span> Español'>Español</option>
+</select>                        
                  
                                                                                     
                                                                                     
