--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,6 +77,11 @@
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
 
+<script>
+    $(function(){
+    $('.selectpicker').selectpicker();
+});
+</script>
   
   </body>
 </html>
