--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
             <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
             <li class="{{ ss }}""><a href="/software">Software</a></li>
-            <li class="{{ es }}"><a href="/ecommerce">E-Commerce</a></li>
+            <li class="{{ es }}"><a href="/ecommerce">E-Commercez</a></li>
             <li class="{{ ws }}"><a href="/web">Web</a></li>
             <li class="{{ bs }}"><a href="/branding">Branding</a></li>
             <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
