--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,8 +49,8 @@
           <ul class="probootstrap-main-nav">
             <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
-            <li class="{{ ss }}""><a href="/software">Software</a></li>
-            <li class="{{ es }}"><a href="/ecommerce">E-Commercez</a></li>
+            <li class="{{ ss }}"><a href="/software">Software</a></li>
+            <li class="{{ es }}"><a href="/ecommerce">E-Commercea</a></li>
             <li class="{{ ws }}"><a href="/web">Web</a></li>
             <li class="{{ bs }}"><a href="/branding">Branding</a></li>
             <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
