--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
             <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
             <li class="{{ ss }}"><a href="/software">Software</a></li>
-            <li class="{{ es }}"><a href="/ecommerce">E-Commerce X</a></li>
+            <li class="{{ es }}"><a href="/ecommerce">E-Commerce Y</a></li>
             <li class="{{ ws }}"><a href="/web">Web</a></li>
             <li class="{{ bs }}"><a href="/branding">Branding</a></li>
             <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
@@ -65,6 +65,14 @@
             <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
       </a></li>-->
+		  <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"> </span> English</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown09">
+                                <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span>  French</a>
+                                <a class="dropdown-item" href="#it"><span class="flag-icon flag-icon-it"> </span>  Italian</a>
+                                <a class="dropdown-item" href="#ru"><span class="flag-icon flag-icon-ru"> </span>  Russian</a>
+                            </div>
+                        </li>            
           </ul>
 
           <div class="extra-text visible-xs"> 
@@ -79,14 +87,7 @@
             <li><a target="_blank" href="https://www.linkedin.com/company/33459907/"><i class="icon-linkedin"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/channel/UCVjCH0EEFGhPbvb1fJhqGow/"><i class="icon-youtube"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/AMSoftware.es/"><i class="icon-instagram2"></i></a></li>
-            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"> </span> English</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown09">
-                                <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span>  French</a>
-                                <a class="dropdown-item" href="#it"><span class="flag-icon flag-icon-it"> </span>  Italian</a>
-                                <a class="dropdown-item" href="#ru"><span class="flag-icon flag-icon-ru"> </span>  Russian</a>
-                            </div>
-                        </li>                  
+                  
                                                          
                                                                                                              </ul>
 													     
