--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,7 @@
             <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
       </a></li>-->
-		  <li>
+		  <li style="opacity:0%;">
 			  <select class="selectpicker" data-width="fit">
     <option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
   <option  data-content='<span class="flag-icon flag-icon-mx"></span> Español'>Español</option>
