--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,7 +67,7 @@
       </a></li>-->
 		  <li style="opacity:0%;">
 			  <select class="selectpicker" data-width="fit">
-    <option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
+    <a href="apple.com"><option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option></a>
   <option  data-content='<span class="flag-icon flag-icon-mx"></span> Español'>Español</option>
 </select>
 		  </li>
