--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
             <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
             <li class="{{ ss }}"><a href="/software">Software</a></li>
-            <li class="{{ es }}"><a href="/ecommerce">E-Commerce Z</a></li>
+            <li class="{{ es }}"><a href="/ecommerce">E-Commerce</a></li>
             <li class="{{ ws }}"><a href="/web">Web</a></li>
             <li class="{{ bs }}"><a href="/branding">Branding</a></li>
             <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
@@ -66,10 +66,19 @@
               <i class="icon-language" ></i>
       </a></li>-->
 		  <li style="opacity:0%;">
-			  <select class="selectpicker" data-width="fit">
-    <a href="apple.com"><option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option></a>
-  <option  data-content='<span class="flag-icon flag-icon-mx"></span> Español'>Español</option>
-</select>
+			 <!-- Example single danger button -->
+<div class="btn-group">
+  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Action
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Separated link</a>
+  </div>
+</div>
 		  </li>
           </ul>
 
