--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,18 +65,7 @@
             <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
       </a></li>-->
-		  <li style="opacity:0%;">
-			<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
-		  </li>
+		  <li><a href="https://www.amsoftware.club/"><i class="fa fa-language"></i></a></li>
           </ul>
 
           <div class="extra-text visible-xs"> 
