--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,7 @@
             <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
       </a></li>-->
-		  <li><a href="https://www.amsoftware.club/"><i class="fa fa-language"></i></a></li>
+		  <li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>
           </ul>
 
           <div class="extra-text visible-xs"> 
