--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             <h4 class="heading">Otras Redes</h4>
             <ul class="stack-link">
               <!--<li><a target="_blank" href="http://amsoftware.biz">AM-Ovens</a></li>-->
-              <li><a target="_blank" href="http://haycomercio.com">HayComercio.com</a></li>
+              <li><a target="_blank" href="https://hazcomercio.com">HazComercio.com</a></li>
               <!--<li><a href="#">Blog</a></li>-->
               <li><a target="_blank" href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
               <li><a target="_blank" href="#">Upwork.com</a></li>
