--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="AM ">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
