--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
   {% assign ws = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/branding" %}
+  {% if page.permalink == "/studio" %}
   {% assign bs = "active" %}
   {% endif %}
 
@@ -52,7 +52,7 @@
             <li class="{{ ss }}"><a href="/software">Software</a></li>
             <li class="{{ es }}"><a href="/ecommerce">E-Commerce</a></li>
             <li class="{{ ws }}"><a href="/web">Web</a></li>
-            <li class="{{ bs }}"><a href="/branding">Branding</a></li>
+            <li class="{{ bs }}"><a href="/studio">Studio</a></li>
             <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
             <li class="{{ cs }}"><a href="/contacto">Contacto</a></li></strong>
           </ul>
