--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,21 +11,22 @@
               <li><a href="/software">Software</a></li>
               <li><a href="/ecommerce">E-Commerce</a></li>
               <li><a href="/web">Web</a></li>
-              <li><a href="/branding">Branding</a></li>
+              <li><a href="/studio">Studio</a></li>
               <li><a href="/contacto">Contáctanos</a></li>
             </ul>
           </div>
         </div>
         <div class="col-md-3">
           <div class="probootstrap-footer-widget">
-            <h4 class="heading">Otras Redes</h4>
+            <h4 class="heading">Enlaces</h4>
             <ul class="stack-link">
               <!--<li><a target="_blank" href="http://amsoftware.biz">AM-Ovens</a></li>-->
               <li><a target="_blank" href="https://hazcomercio.com">HazComercio.com</a></li>
               <!--<li><a href="#">Blog</a></li>-->
               <li><a target="_blank" href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
-              <li><a target="_blank" href="#">Upwork.com</a></li>
+              <!--<li><a target="_blank" href="#">Upwork.com</a></li>
               <li><a target="_blank" href="https://www.fiverr.com/ams_solutions">Fiverr.com</a></li>
+              -->
             </ul>
           </div> 
         </div>
