--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,16 +3,16 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <meta name="description" content="AM ">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <meta name="description" content="AM Software">
+    <meta name="keywords" content="Software, Web, Ecommerce, Branding, Marketing, Artificial Intelligence, Data, Cloud, Computing">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="{{ 'css/styles-merged.css' | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ 'css/style.min.css' | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ 'css/custom.css' | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ 'css/flag-icon.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="/css/styles-merged.css">
+    <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/flag-icon.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
