--- a/_includes/header_es.html
+++ b/_includes/header_es.html
@@ -10,31 +10,31 @@
   {% assign ns = "" %}
   {% assign cs = "" %}
 
-  {% if page.permalink == "/" %}
+  {% if page.permalink == "/es" %}
   {% assign is = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/software" %}
+  {% if page.permalink == "/es/software" %}
   {% assign ss = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/ecommerce" %}
+  {% if page.permalink == "/es/ecommerce" %}
   {% assign es = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/web" %}
+  {% if page.permalink == "/es/web" %}
   {% assign ws = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/studio" %}
+  {% if page.permalink == "/es/studio" %}
   {% assign bs = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/nosotros" %}
+  {% if page.permalink == "/es/nosotros" %}
   {% assign ns = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/contacto" %}
+  {% if page.permalink == "/es/contacto" %}
   {% assign cs = "active" %}
   {% endif %}
 
@@ -47,14 +47,14 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <strong><li class="{{ is }}"><a href="/">Inicio</a></li>
+            <strong><li class="{{ is }}"><a href="/es">Inicio</a></li>
             <!--<li><a href="/es/ovens">ERP</a></li>-->
-            <li class="{{ ss }}"><a href="/software">Software</a></li>
-            <li class="{{ es }}"><a href="/ecommerce">E-Commerce</a></li>
-            <li class="{{ ws }}"><a href="/web">Web</a></li>
-            <li class="{{ bs }}"><a href="/studio">Studio</a></li>
-            <li class="{{ ns }}"><a href="/nosotros">Nosotros</a></li>
-            <li class="{{ cs }}"><a href="/contacto">Contacto</a></li></strong>
+            <li class="{{ ss }}"><a href="/es/software">Software</a></li>
+            <li class="{{ es }}"><a href="/es/ecommerce">E-Commerce</a></li>
+            <li class="{{ ws }}"><a href="/es/web">Web</a></li>
+            <li class="{{ bs }}"><a href="/es/studio">Studio</a></li>
+            <li class="{{ ns }}"><a href="/es/acerca">Acerca</a></li>
+            <li class="{{ cs }}"><a href="/es/contacto">Contacto</a></li></strong>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
