--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -54,7 +54,7 @@
             <li class="{{ ws }}"><a href="/en/web">Web</a></li>
             <li class="{{ bs }}"><a href="/en/studio">Studio</a></li>
             <li class="{{ ns }}"><a href="/en/about">About</a></li>
-            <li class="{{ cs }}"><a href="/en/contact">Contacto</a></li></strong>
+            <li class="{{ cs }}"><a href="/en/contact">Contact</a></li></strong>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.en"><i class="icon-facebook2"></i></a></li>
