--- a/_includes/footer_es.html
+++ b/_includes/footer_es.html
@@ -6,13 +6,13 @@
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Menú</h4>
             <ul class="stack-link">
-              <li><a href="/">Inicio</a></li>
-              <li><a href="/nosotros">Nosotros</a></li>
-              <li><a href="/software">Software</a></li>
-              <li><a href="/ecommerce">E-Commerce</a></li>
-              <li><a href="/web">Web</a></li>
-              <li><a href="/studio">Studio</a></li>
-              <li><a href="/contacto">Contáctanos</a></li>
+              <li><a href="/es">Inicio</a></li>
+              <li><a href="/es/acerca">Acerca</a></li>
+              <li><a href="/es/software">Software</a></li>
+              <li><a href="/es/ecommerce">E-Commerce</a></li>
+              <li><a href="/es/web">Web</a></li>
+              <li><a href="/es/studio">Studio</a></li>
+              <li><a href="/es/contacto">Contáctanos</a></li>
             </ul>
           </div>
         </div>
