--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -40,7 +40,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="/" class="probootstrap-logo"><span><img src="img/logo.png" style="height:80px;width:auto;"></span></a>
+        <a href="/" class="probootstrap-logo"><span><img src="/img/logo.png" style="height:80px;width:auto;"></span></a>
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
