--- a/_includes/header_es.html
+++ b/_includes/header_es.html
@@ -55,6 +55,7 @@
             <li class="{{ bs }}"><a href="/es/studio">Studio</a></li>
             <li class="{{ ns }}"><a href="/es/acerca">Acerca</a></li>
             <li class="{{ cs }}"><a href="/es/contacto">Contacto</a></li></strong>
+		 <li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
@@ -65,7 +66,7 @@
             <!--<li><a href="http://amsoftware.solutions">
               <i class="icon-language" ></i>
       </a></li>-->
-		  <li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>
+		  <!--<li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>-->
           </ul>
 
           <div class="extra-text visible-xs"> 
