--- a/_includes/header_es.html
+++ b/_includes/header_es.html
@@ -26,7 +26,7 @@
   {% assign ws = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/es/studio" %}
+  {% if page.permalink == "/es/marketing" %}
   {% assign bs = "active" %}
   {% endif %}
 
@@ -52,10 +52,10 @@
             <li class="{{ ss }}"><a href="/es/software">Software</a></li>
             <li class="{{ es }}"><a href="/es/ecommerce">E-Commerce</a></li>
             <li class="{{ ws }}"><a href="/es/web">Web</a></li>
-            <li class="{{ bs }}"><a href="/es/studio">Studio</a></li>
+            <li class="{{ bs }}"><a href="/es/marketing">Marketing</a></li>
             <li class="{{ ns }}"><a href="/es/acerca">Acerca</a></li>
             <li class="{{ cs }}"><a href="/es/contacto">Contacto</a></li></strong>
-		 <li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>
+		 <li><a href="https://www.amsoftware.co/"><i class="icon-language"></i></a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
@@ -71,9 +71,9 @@
 
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>Dirección</h5>
-            <p>Carretera Sur, Managua, NI</p>
-            <h5>Conectar</h5>
+            <!--<h5>Dirección</h5>
+            <p></p>
+            <h5>Conectar</h5>-->
             <center>
                                                         <ul class="social-buttons">
               <li><a target="_blank" href="https://www.facebook.com/amsoftware.es"><i class="icon-facebook2"></i></a></li>
