--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -26,7 +26,7 @@
   {% assign ws = "active" %}
   {% endif %}
 
-  {% if page.permalink == "/en/studio" %}
+  {% if page.permalink == "/en/marketing" %}
   {% assign bs = "active" %}
   {% endif %}
 
@@ -52,10 +52,10 @@
             <li class="{{ ss }}"><a href="/en/software">Software</a></li>
             <li class="{{ es }}"><a href="/en/ecommerce">E-Commerce</a></li>
             <li class="{{ ws }}"><a href="/en/web">Web</a></li>
-            <li class="{{ bs }}"><a href="/en/studio">Studio</a></li>
+            <li class="{{ bs }}"><a href="/en/marketing">Marketing</a></li>
             <li class="{{ ns }}"><a href="/en/about">About</a></li>
             <li class="{{ cs }}"><a href="/en/contact">Contact</a></li></strong>
-		   <li><a href="https://www.amsoftware.club/"><i class="icon-language"></i></a></li>
+		   <li><a href="https://www.amsoftware.co/"><i class="icon-language"></i></a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a target="_blank" href="https://www.facebook.com/amsoftware.en"><i class="icon-facebook2"></i></a></li>
@@ -71,9 +71,9 @@
 
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>Address</h5>
+            <!--<h5>Address</h5>
             <p>Carretera Sur, Managua, NI</p>
-            <h5>Connect</h5>
+            <h5>Connect</h5>-->
             <center>
                                                         <ul class="social-buttons">
               <li><a target="_blank" href="https://www.facebook.com/amsoftware.en"><i class="icon-facebook2"></i></a></li>
