--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -48,7 +48,7 @@
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <strong><li class="{{ is }}"><a href="/en">Home</a></li>
-            <!--<li><a href="/es/ovens">ERP</a></li>-->
+           <li class="{{ ns }}"><a href="/en/about">About</a></li>
             <li class="{{ ss }}"><a href="/en/software">Software</a></li>
             <li class="{{ ws }}"><a href="/en/web">Web</a></li>
 	    <li class="{{ es }}"><a href="/en/ecommerce">E-Commerce</a></li>
