--- a/_includes/footer_en.html
+++ b/_includes/footer_en.html
@@ -11,7 +11,7 @@
               <li><a href="/en/software">Software</a></li>
               <li><a href="/en/ecommerce">E-Commerce</a></li>
               <li><a href="/en/web">Web</a></li>
-              <li><a href="/en/studio">Studio</a></li>
+              <li><a href="/en/marketing">Marketing</a></li>
               <li><a href="/en/contact">Contact</a></li>
             </ul>
           </div>
@@ -20,8 +20,6 @@
           <div class="probootstrap-footer-widget">
             <h4 class="heading">Links</h4>
             <ul class="stack-link">
-              <!--<li><a target="_blank" href="http://amsoftware.biz">AM-Ovens</a></li>-->
-              <li><a target="_blank" href="https://hazcomercio.com">HazComercio.com</a></li>
               <!--<li><a href="#">Blog</a></li>-->
               <li><a target="_blank" href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
               <!--<li><a target="_blank" href="#">Upwork.com</a></li>
